crates/sdk-derive/tests/ui/router/fail/incorrect_fallback_signature.stderr
error: fallback method must have signature 'fn fallback(&self)' with no parameters and no return value
  --> tests/ui/router/fail/incorrect_fallback_signature.rs:25:5
   |
25 |     fn fallback(&self, data: u64) -> bool {
   |     ^^

error: Failed to process router implementation due to method parsing errors
  --> tests/ui/router/fail/incorrect_fallback_signature.rs:23:1
   |
23 | #[router(mode = "solidity")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `router` (in Nightly builds, run with -Z macro-backtrace for more info)
